--- a/style.css
+++ b/style.css
@@ -41,3 +41,50 @@ h1 {
 a{
 	text-decoration: none;
 }
+
+.backgroundimage {
+	width: 100%;
+	position: fixed;
+  	height: 100%;
+  	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+}
+
+a {
+	color:black;
+}
+
+.work {
+	position: fixed;
+	font-family: Sukhumvit Set bold, Sans-serif;
+	font-size: 16px;
+	bottom: 500px;
+	left: 320px;
+}
+
+.about {
+	position: fixed;
+	font-family: Sukhumvit Set bold, Sans-serif;
+	font-size: 16px;
+	bottom: 450px;
+	left: 320px;
+}
+
+.contact {
+	position: fixed;
+	font-family: Sukhumvit Set bold, Sans-serif;
+	font-size: 16px;
+	bottom: 400px;
+	left: 320px;
+}
+
+a {
+	color:black;
+}
+
+
+
+
+
+
